# recursive-image

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  recursive-image.cabal  stack.yaml
lib/: Core.hs
src/: Main.hs  Test.hs
static/: filehook.js  index.html
