name:                recursive-image
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/recursive-image#readme
license:             BSD3
license-file:        LICENSE
author:              Adrian Dapprich
maintainer:          adrian@dapprich.dev
copyright:           2019 Adrian Dapprich
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable recursive-image
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , threepenny-gui
                     , extra
                     , hip
